--- a/doc/Cheatsheet/pattern/factory.adoc
+++ b/doc/Cheatsheet/pattern/factory.adoc
@@ -13,294 +13,104 @@ Le bout de code de cet exemple est la creation d'un courrier avec les cas suivan
 * Un décès
 * Autres
 
+NOTE: Le code  n'est pas le meilleur qu'il soit, mais c'est pour l'exemple. Il faut juste imaginer de tomber sur un bout de code similaire à celui-ci répété plusieurs fois.
 
 ===== Classe de données
 
 [%linenums,java,subs=attributes+quotes+]
 ----
-include::../../../application/src/main/java/org/document/applicaton/dto/CourrierDto.java[]
+include::../../../application/src/main/java/org/document/application/pattern/factory/dto/CourrierDto.java[]
 ----
 
 ===== Controller
 [%linenums,java,subs=attributes+quotes+]
 ----
-include::../../../application/src/main/java/org/document/applicaton/controllers/CourrierController.java[]
+include::../../../application/src/main/java/org/document/application/pattern/factory/controllers/CourrierController.java[]
 ----
 
 ===== Services
 
 .Service Courrier dans le cas d'une naissance
-[source,java,subs=attributes+]
+[%linenums,java,subs=attributes+quotes+]
 ----
-package org.pattern.factory.services;
-
-import org.pattern.factory.dto.Courrier;
-import org.pattern.factory.enumeration.DemandeType;
-import org.pattern.factory.enumeration.Document;
-import org.pattern.factory.enumeration.Operation;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-
-@Service
-@Slf4j
-@RequiredArgsConstructor
-public class CourrierNaissanceServiceImpl implements CourrierService {
-
-    @Override
-    public Courrier courrierNaissance() {
-        log.info("Courrier de naissance");
-        Courrier courrier = new Courrier();
-        courrier.setTypeDemande(DemandeType.COURRIER_NAISS.getCode());
-        courrier.setCodeDocument(Document.COURRIER_NAISS.getCode());
-        courrier.setCodeOperation(Operation.COURRIER_NAISS.getCode());
-
-        return courrier;
-    }
-}
-
+include::../../../application/src/main/java/org/document/application/pattern/factory/services/CourrierNaissanceService.java[]
 ----
 
 .Service Courrier dans le cas d'un mariage
-[source,java,subs=attributes+]
+[%linenums,java,subs=attributes+quotes+]
 ----
-package org.pattern.factory.services;
-
-import org.pattern.factory.dto.Courrier;
-import org.pattern.factory.enumeration.DemandeType;
-import org.pattern.factory.enumeration.Document;
-import org.pattern.factory.enumeration.Operation;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-
-@Service
-@Slf4j
-@RequiredArgsConstructor
-public class CourrierMariageServiceImpl implements CourrierService {
-
-    @Override
-    public Courrier courrierMariage() {
-        log.info("Courrier de mariage");
-        Courrier courrier = new Courrier();
-        courrier.setTypeDemande(DemandeType.COURRIER_MARIAGE.getCode());
-        courrier.setCodeDocument(Document.COURRIER_MARIAGE.getCode());
-        courrier.setCodeOperation(Operation.COURRIER_MARIAGE.getCode());
-
-        return courrier;
-    }
-   
-}
+include::../../../application/src/main/java/org/document/application/pattern/factory/services/CourrierMariageService.java[]
 ----
 
 .Service Courrier dans le cas d'une décès
-[source,java,subs=attributes+]
+[%linenums,java,subs=attributes+quotes+]
 ----
-package org.pattern.factory.services;
-
-import org.pattern.factory.dto.Courrier;
-import org.pattern.factory.enumeration.DemandeType;
-import org.pattern.factory.enumeration.Document;
-import org.pattern.factory.enumeration.Operation;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-
-@Service
-@Slf4j
-@RequiredArgsConstructor
-public class CourrierDecesServiceImpl implements CourrierService {
-    @Override
-    public Courrier courrierDeces() {
-        log.info("Courrier de deces");
-        Courrier courrier = new Courrier();
-        courrier.setTypeDemande(DemandeType.COURRIER_DECES.getCode());
-        courrier.setCodeDocument(Document.COURRIER_DECES.getCode());
-        courrier.setCodeOperation(Operation.COURRIER_DECES.getCode());
-
-        return courrier;
-    }
-}
+include::../../../application/src/main/java/org/document/application/pattern/factory/services/CourrierDecesService.java[]
 ----
 
 
 .Service Courrier dans le cas non connu
-[source,java,subs=attributes+]
+[%linenums,java,subs=attributes+quotes+]
 ----
-package org.pattern.factory.services;
-
-import org.pattern.factory.dto.Courrier;
-import org.pattern.factory.enumeration.DemandeType;
-import org.pattern.factory.enumeration.Document;
-import org.pattern.factory.enumeration.Operation;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-
-@Service
-@Slf4j
-@RequiredArgsConstructor
-public class CourrierAutresServiceImpl implements CourrierService {
-
-    @Override
-    public Courrier courrierAutres(){
-        log.info("Autres courrier");
-        Courrier courrier = new Courrier();
-        courrier.setTypeDemande(DemandeType.COURRIER_AUTRE.getCode());
-        courrier.setCodeDocument(Document.COURRIER_AUTRE.getCode());
-        courrier.setCodeOperation(Operation.COURRIER_AUTRE.getCode());
-
-        return courrier;
-    }
-}
+include::../../../application/src/main/java/org/document/application/pattern/factory/services/CourrierAutresService.java[]
+----
+===== Tests unitaires
+[%linenums,java,subs=attributes+quotes+]
+----
+include::../../../application/src/test/java/org/document/application/pattern/factory/controllers/CourrierControllerTest.java[]
 ----
 ==== Premier Refactoring
-Voici le type de réfacto. qui est fait :
+Souvent le premier type de réfactoring qui est fait et l'utilisation du *if* ou bien du *switch* en fonction de la version de java utilisée.
+Je vais juste faire le *if*
 
-.Externaliser la création du document
-[source,java,subs=attributes+]
+===== Service
+.Le nouveau service
+[%linenums,java,subs=attributes+quotes+]
 ----
-package org.pattern.factory.services;
-
-import org.pattern.factory.dto.Courrier;
-import org.pattern.factory.enumeration.DemandeType;
-import org.pattern.factory.enumeration.Document;
-import org.pattern.factory.enumeration.Operation;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-
-@Service
-@Slf4j
-@RequiredArgsConstructor
-public class CreationCourrierServiceImpl implements CreationCourrierService {
-
-    @Override
-    public Courrier creationCourrier(DemandeType demandeType){
-        log.info("Creation du courrier {}",demandeType.getCode());
-        return getCourrier(demandeType);
-    }
-    
-    private Courrier getCourrier(DemandeType demandeType){
-    
-        if(demandeType.getCode().equals(DemandeType.COURRIER_NAISS.getCode())){
-            return create(DemandeType.COURRIER_NAISS,Documen.COURRIER_NAISS,Operation.COURRIER_NAISS);
-            
-        }else if(demandeType.getCode().equals(DemandeType.COURRIER_MARIAGE.getCode())){
-            return create(DemandeType.COURRIER_MARIAGE,Document.COURRIER_MARIAGE,Operation.COURRIER_MARIAGE);
-            
-        }else if(demandeType.getCode().equals(DemandeType.COURRIER_DECES.getCode())){
-            return create(DemandeType.COURRIER_DECES,Document.COURRIER_DECES,Operation.COURRIER_DECES);
-            
-        }
-        
-        return create(DemandeType.COURRIER_AUTRE,Document.COURRIER_AUTRE,Operation.COURRIER_AUTRE);
-    }
-    private Courrier create(DemandeType demandeType,Document document,Operation operation){
-        Courrier courrier = new Courrier();
-        courrier.setTypeDemande(demandeType.getCode());
-        courrier.setCodeDocument(document.getCode());
-        courrier.setCodeOperation(operation.getCode());
-        return courrier;
-    }
-}
+include::../../../application/src/main/java/org/document/application/pattern/factory/services/CourrierServiceWithIf.java[]
 ----
 
-En fonction de la version java utilisée, il est aussi possible de faire un *'switch case'*
-
-.Même version avec un swicth
-[source,java,subs=attributes+]
+===== Controller
+.Le nouveau Controller
+[%linenums,java,subs=attributes+quotes+]
 ----
-package org.pattern.factory.services;
-
-import org.pattern.factory.dto.Courrier;
-import org.pattern.factory.enumeration.DemandeType;
-import org.pattern.factory.enumeration.Document;
-import org.pattern.factory.enumeration.Operation;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
-
-@Service
-@Slf4j
-@RequiredArgsConstructor
-public class CreationCourrierServiceImpl implements CreationCourrierService {
-
-    @Override
-    public Courrier creationCourrier(DemandeType demandeType){
-        log.info("Creation du courrier {}",demandeType.getCode());
-        return getCourrier(demandeType);
-    }
-    
-    private Courrier getCourrier(DemandeType demandeType){
-    
-        swicth (demandeType) {
-        case DemandeType.COURRIER_NAISS:
-            return create(DemandeType.COURRIER_NAISS,Document.COURRIER_NAISS,Operation.COURRIER_NAISS);
-        case DemandeType.COURRIER_MARIAGE:
-            return create(DemandeType.COURRIER_MARIAGE,Document.COURRIER_MARIAGE,Operation.COURRIER_MARIAGE);
-        case DemandeType.COURRIER_DECES:
-            return create(DemandeType.COURRIER_DECES,Document.COURRIER_DECES,Operation.COURRIER_DECES);
-        default : 
-            return create(DemandeType.COURRIER_AUTRE,Document.COURRIER_AUTRE,Operation.COURRIER_AUTRE);
-        }
-    }
-    
-    //...
-}
+include::../../../application/src/main/java/org/document/application/pattern/factory/controllers/CourrierControllerWithIf.java[]
 ----
 
-.Service
-[source,java]
+===== Tests unitaires
+
+.Le nouveau test unitaire
+[%linenums,java,subs=attributes+quotes+]
+----
+include::../../../application/src/test/java/org/document/application/pattern/factory/controllers/CourrierControllerWithIfTest.java[]
 ----
 
-----
-Si d'aventure, on doit réaliser l'ajout de nouveau cas, il faudra venir ajouter des if ou des case. +
-Au bout d'un moment, cela vite devenir _lourd_ et __pas très lisible__.
-Une solution est le *Pattern Factory*
+IMPORTANT: Le fait de mettre en place le *if*, nous oblige à mieux organiser notre code et plus qu'un seul service. Mais si d'aventure de nouveaux cas arrivaient, nous aurions un code avec une cascade de *else if*.
 
 ==== Solution Pattern Factory
+Le pattern factory permet de s'affranchir des *if/else if* ou du *switch*
+Pour cela, il suffit de créer une énumération
 
+===== Enumération
 .Enumération
-[source,java,subs=attributes+]
+[%linenums,java,subs=attributes+quotes+]
 ----
-public enum CourrierFactory {
-    NAISSANCE{
-        @Override
-        public DemandeAffiliationDto create() {
-            return create(DemandeType.COURRIER_NAISS,Document.COURRIER_NAISS,Operation.COURRIER_NAISS);
-        }
-    },
-    MARIAGE{
-        @Override
-        public DemandeAffiliationDto create() {
-            return create(DemandeType.COURRIER_MARIAGE,Document.COURRIER_MARIAGE,Operation.COURRIER_MARIAGE);
-        }
-    },
-    DECES{
-        @Override
-        public DemandeAffiliationDto create() {
-            return create(DemandeType.COURRIER_DECES,Document.COURRIER_DECES,Operation.COURRIER_DECES);
-        }
-    },
-    AUTRES{
-        @Override
-        public DemandeAffiliationDto create() {
-            return create(DemandeType.COURRIER_AUTRE,Document.COURRIER_AUTRE,Operation.COURRIER_AUTRE);
-        }
-    };
-
-    public abstract DemandeAffiliationDto create();
-
-    private Courrier create(DemandeType demandeType,Document document,Operation operation){
-            Courrier courrier = new Courrier();
-            courrier.setTypeDemande(demandeType.getCode());
-            courrier.setCodeDocument(document.getCode());
-            courrier.setCodeOperation(operation.getCode());
-            return courrier;
-    }
-
-}
+include::../../../application/src/main/java/org/document/application/pattern/factory/dto/CourrierFactory.java[]
 ----
 
+==== Service
+[%linenums,java,subs=attributes+quotes+]
+----
+include::../../../application/src/main/java/org/document/application/pattern/factory/services/CreationCourrierServiceWithEnum.java[]
+----
+==== Controller
+[%linenums,java,subs=attributes+quotes+]
+----
+include::../../../application/src/main/java/org/document/application/pattern/factory/controllers/CourrierControllerWithEnum.java[]
+----
+==== Test unitaire
+[%linenums,java,subs=attributes+quotes+]
+----
+include::../../../application/src/test/java/org/document/application/pattern/factory/controllers/CourrierControllerWithEnumTest.java[]
+----
 
